--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Girly Fashion Boutique </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="assessets/bootstrap-5/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    
 </head>
 <body>
     <!--Section 1 - Nav Bar Starts -->
@@ -15,7 +14,7 @@
 
    <nav class="navbar navbar-expand-lg navbar -light bg -light" id= "navbar"> 
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Girly Fashion Boutique </a>
+    <a class="navbar-brand girly" href="#">Girly Fashion Boutique </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -67,8 +66,16 @@
 
   <div class="second_co">
 
-    <div class="second_co1"></div>
-    <div class="second_co2"> <img src="assessets/iStock-863190232-644x429.jpg" alt=""> shopping img</div>
+    <div class="second_co1">
+      <br>
+         <h1>Welcome To Our Girly Fashion Boutique </h1>
+         <br>
+          <p>Fashion forward dresses that empower and inspire girls' confidence and style .providing the best platform for individuals to discover and purchase unique and fashionable jewelry and dresses.</p>
+          <button class="btn btn-primary" type="submit">let's Go</button>
+
+
+    </div>
+    <div class="second_co2"> <img src="assets/image/iStock-863190232-644x429.jpg" alt=""></div>
 
 
   </div>
@@ -81,6 +88,6 @@
   <!-- section 3 end -->
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
